<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.CreateProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/createProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="163dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="163dp"
            android:layout_marginBottom="704dp"
            android:text="@string/createProfileText"
            android:textColor="#3949AB"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.671"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/UserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="41dp"
            android:text="@string/userText"
            android:textColor="#3949AB"
            app:layout_constraintEnd_toStartOf="@+id/UsernameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/UsernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/empty"
            app:layout_constraintStart_toEndOf="@+id/UserText"
            app:layout_constraintTop_toBottomOf="@+id/createProfileText" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="21dp"
            android:text="@string/PasswordText"
            android:textColor="#5E35B1"
            app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text="@string/empty"
            app:layout_constraintStart_toEndOf="@+id/passwordText"
            app:layout_constraintTop_toBottomOf="@+id/UsernameText" />

        <TextView
            android:id="@+id/bioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="11dp"
            android:text="@string/bioText"
            android:textColor="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@+id/bioEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/bioEditText"
            android:layout_width="382dp"
            android:layout_height="123dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioText" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="158dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="104dp"
            android:text="@string/createButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>